# PlotSim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt  app.cc  app.hh  config.hh  simulator.cc  simulator.hh  tile.cc  tile.hh  timer.hh
maps/: ak.h  mi.h  ri.h  triangle.hh
part1/: CMakeLists.txt  mysimulator.cc  mysimulator.hh  plotsim.cc
part2/: CMakeLists.txt  mysimulator.cc  mysimulator.hh  plotsim.cc
